Fix person card and details pop up text wrapping problems.

--- a/src/main/resources/view/PatientistTheme.css
+++ b/src/main/resources/view/PatientistTheme.css
@@ -378,6 +378,7 @@
     -fx-font-family: "Segoe UI";
     -fx-font-size: 13px;
     -fx-text-fill: #010504;
+    -fx-wrap-text: true;
 }
 
 .details {
